# python_project_template

./: README.md  zshrc-template
api-template/: .gitignore  DockerFile  README.md  pyproject.toml
api-template/src/template_placeholder/: main.py
library-template/: README.md  pyproject.toml
library-template/src/template_placeholder/: main.py
