[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"

[project]
name = "template-placeholder"
version = "0.1.0"
description = "A distributable python core package and terminal CLI engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
template-placeholder-cli = "template_placeholder.main:cli"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
    packages = ["src/template_placeholder"]
